--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background: #f4f4f4;
+  background: #ebe4e4;
 }
 
 .container {
@@ -23,6 +23,9 @@ body {
   background-color: #0056b3;
 }
 
+#toggle-favorite-btn {
+  display: none;
+}
 .quote {
   font-style: italic;
 }
@@ -30,4 +33,22 @@ body {
 .quote::before,
 .quote::after {
   content: '"';
+}
+
+.favorites-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.favorite-card {
+  background-color: #f1f889;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 25%;
+}
+.author {
+  font-style: italic;
 }
