--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   background: #ebe4e4;
+  background: #696868;
 }
 
 .container {
@@ -51,4 +52,11 @@ body {
 }
 .author {
   font-style: italic;
+}
+
+.star-icon {
+  color: yellow;
+  font-size: 30px;
+  vertical-align: middle;
+  cursor: pointer;
 }
