Favorites buttons icon and refactoring

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background: #ebe4e4;
-  background: #696868;
+  background: #c7c2c2;
 }
 
 .container {
