--- a/style.css
+++ b/style.css
@@ -1,36 +1,60 @@
 body {
   font-family: Arial, sans-serif;
-  background: #fff;
-  background: #7d7d7d;
+  background-color: white;
 }
 
 .container {
   max-width: 600px;
-  margin: 50px auto;
+  margin: 20px auto;
   text-align: center;
 }
 
 .btn {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #007bff;
-  color: #fff;
+  color: white;
   border: none;
   cursor: pointer;
   border-radius: 10px;
 }
 
-.btn:hover {
+.btn-primary {
+  background-color: #007bff;
+}
+
+.btn-primary:hover {
   background-color: #0056b3;
 }
 
-.quote {
-  font-style: italic;
+.btn-danger {
+  background-color: transparent;
+  color: red;
+  border: 2px solid red;
 }
 
-.quote::before,
-.quote::after {
+.btn-danger:hover {
+  background-color: red;
+  color: white;
+}
+
+.quote {
+  font-size: 1.2em;
+}
+
+.quote-text {
+  min-height: 2.3em;
+  font-style: italic;
+  margin-block-end: 0.7em;
+}
+
+.quote-text::before,
+.quote-text::after {
   content: '"';
+}
+
+.quote-author {
+  margin-block-start: 0.7em;
+  font-weight: bold;
 }
 
 .favorites-container {
@@ -40,14 +64,22 @@ body {
 }
 
 .favorite-card {
-  background-color: #e5cbfd;
+  display: flex;
+  flex-direction: column;
+  background-color: #feffe6;
   padding: 10px 20px;
   margin: 10px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   width: 25%;
 }
-.author {
+
+.favorite-card-content {
+  flex: 1;
+  padding: 0 3px;
+}
+
+.favorite-card-author {
   font-style: italic;
 }
 
